[tool.poetry]
name = "test-site"
version = "0.1.0"
description = ""
authors = ["Barzabel <Kochenko1995@mail.ru>"]
readme = "README.md"
packages = [
    {include = "tests"}
]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.22.0"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
